--- a/html/disco.html
+++ b/html/disco.html
@@ -8,60 +8,64 @@
   </head>
   <body>
 
-    <div class="disco container">
-      <div class="row">
-        <div class="col-9 center titulo">
-          <h4>Titulo del disco</h4>
+    <form class="" action="./../formularios/compra_disco.php" method="GET">
+      <div class="disco container">
+        <div class="row">
+          <div class="col-9 center titulo">
+            <h4>Titulo del disco</h4>
+          </div>
+          <div class="col-3 center anio">
+            <p>2003</p>
+          </div>
         </div>
-        <div class="col-3 center anio">
-          <p>2003</p>
+        <div class="row">
+          <div class="col-5 caratula">
+            <img src="https://i.scdn.co/image/4cacf961094f5cef0352557a0b2f11309d9630df" alt="">
+          </div>
+          <div class="col-7 container lista-canciones">
+            <div class="row cancion">
+              <div class="col nombre"><p>Nombre 1</p></div>
+              <div class="col duracion"><p>01:01</p></div>
+            </div>
+            <div class="row cancion">
+              <div class="col nombre"><p>Nombre 2</p></div>
+              <div class="col duracion"><p>02:02</p></div>
+            </div>
+            <div class="row cancion">
+              <div class="col nombre"><p>Nombre 3</p></div>
+              <div class="col duracion"><p>03:03</p></div>
+            </div>
+            <div class="row cancion">
+              <div class="col nombre"><p>Nombre 4</p></div>
+              <div class="col duracion"><p>04:04</p></div>
+            </div>
+            <div class="row cancion">
+              <div class="col nombre"><p>Nombre 5</p></div>
+              <div class="col duracion"><p>05:05</p></div>
+            </div>
+            <div class="row cancion">
+              <div class="col nombre"><p>Nombre 6</p></div>
+              <div class="col duracion"><p>06:06</p></div>
+            </div>
+            <div class="row cancion">
+              <div class="col nombre"><p>Nombre 7</p></div>
+              <div class="col duracion"><p>07:07</p></div>
+            </div>
+            <div class="row cancion">
+              <div class="col nombre"><p>Nombre 8</p></div>
+              <div class="col duracion"><p>08:08</p></div>
+            </div>
+            <div class="row cancion">
+              <div class="col nombre"><p>Nombre 9</p></div>
+              <div class="col duracion"><p>09:09</p></div>
+            </div>
+          </div>
+        </div>
+        <div class="row center submit">
+          <button type="submit" value="submit">Comprar</button>
         </div>
       </div>
-      <div class="row">
-        <div class="col-5 caratula">
-          <img src="https://i.scdn.co/image/4cacf961094f5cef0352557a0b2f11309d9630df" alt="">
-        </div>
-        <div class="col-7 container lista-canciones">
-          <div class="row cancion">
-            <div class="col nombre"><p>Nombre 1</p></div>
-            <div class="col duracion"><p>01:01</p></div>
-          </div>
-          <div class="row cancion">
-            <div class="col nombre"><p>Nombre 2</p></div>
-            <div class="col duracion"><p>02:02</p></div>
-          </div>
-          <div class="row cancion">
-            <div class="col nombre"><p>Nombre 3</p></div>
-            <div class="col duracion"><p>03:03</p></div>
-          </div>
-          <div class="row cancion">
-            <div class="col nombre"><p>Nombre 4</p></div>
-            <div class="col duracion"><p>04:04</p></div>
-          </div>
-          <div class="row cancion">
-            <div class="col nombre"><p>Nombre 5</p></div>
-            <div class="col duracion"><p>05:05</p></div>
-          </div>
-          <div class="row cancion">
-            <div class="col nombre"><p>Nombre 6</p></div>
-            <div class="col duracion"><p>06:06</p></div>
-          </div>
-          <div class="row cancion">
-            <div class="col nombre"><p>Nombre 7</p></div>
-            <div class="col duracion"><p>07:07</p></div>
-          </div>
-          <div class="row cancion">
-            <div class="col nombre"><p>Nombre 8</p></div>
-            <div class="col duracion"><p>08:08</p></div>
-          </div>
-          <div class="row cancion">
-            <div class="col nombre"><p>Nombre 9</p></div>
-            <div class="col duracion"><p>09:09</p></div>
-          </div>
-        </div>
-      </div>
-      <div class="row"></div>
-    </div>
+    </form>
 
   </body>
 </html>
