--- a/html/disco.html
+++ b/html/disco.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Julio Iglesias</title>
-    <link rel="stylesheet" href="/css/disco.css">
+    <link rel="stylesheet" href="/css/modulos.css">
     <link rel="stylesheet" href="https://unpkg.com/wingcss"/>
   </head>
   <body>
