añadido footer e index

--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,9 @@
 </div>
 </body>
-<footer>
-    <p>footer</p>
+<footer class="row">
+    <a class="col center" href="#">Mapa del sitio</a>
+    <a class="col center" href="#">Contacto</a>
+    <a class="col center" href="#">Información Legal</a>
+    
 </footer>
 </html>
